syncing up for the night - fixed devise delete user and some layout issues

--- a/app/assets/stylesheets/plugins/bootstrap.css.less
+++ b/app/assets/stylesheets/plugins/bootstrap.css.less
@@ -1,2 +1,95 @@
 @import "twitter/bootstrap";
 
+//twitter-bootstrap overrides
+.navbar {
+	border-bottom: 1px solid #CACACA;
+	
+	.brand {
+		font-size: 20px;
+		font-weight: bold;
+		color: transparent;
+	}
+}
+
+// navbar dropshadow
+.navbar .navbar-inner {
+	.box-shadow(0 1px 0 rgba(255,255,255,0.4));
+	.box-shadow(0 0 10px rgba(0,0,0,0.1));
+}
+
+// nav item typography
+.navbar .nav > li > a {
+	font-weight: bold;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+}
+
+.navbar .nav .active > a {
+	background-color: transparent;
+	color: @textColor;
+	
+	&:hover {
+		background-color: transparent;
+		color: @linkColor;
+	}
+}
+
+.navbar .nav > li > a:hover,
+.navbar .nav .open.dropdown .dropdown-toggle {
+	color: @linkColor !important;
+}
+
+.navbar .nav .dropdown-toggle .caret {
+	border-top-color: @textColor;
+	opacity: 1;
+}
+
+.navbar .nav .open.dropdown .caret,
+.navbar .nav .dropdown-toggle:hover .caret {
+	border-top-color: @linkColor !important;
+}
+
+.subnav .nav > li > a {
+	font-weight: bold;
+	color: #777;
+	
+	&:hover {
+		color: @linkColor;
+	}
+}
+
+.subnav .nav > li.active > a {
+	color: @textColor;
+	
+	&:hover {
+		color: @grayDark;
+	}
+}
+
+.navbar-search .search-query,
+.navbar-search .search-query:hover {
+	border: none;
+	color: @grayLight;
+	.placeholder(@grayLight);
+	.box-shadow(inset 0 1px 2px rgba(0, 0, 0, 0.5));
+	
+    &:focus,
+    &.focused {
+		.box-shadow(inset 0 1px 2px rgba(0, 0, 0, 0.5));
+		color: @textColor;
+	}
+}
+
+.navbar .nav-collapse > .nav > li > a > .caret {
+	border-top-color: @grayLight;
+}
+
+.navbar .nav-collapse > .nav > li > a:hover {
+	text-shadow: none;
+	color: @white;
+	
+	.caret {
+		border-top-color: @white;
+	}
+}
+
+
